--- a/config.yaml
+++ b/config.yaml
@@ -1,4 +1,87 @@
 variables:
+    VPC_NAME:
+        required: true
+        description: the name of the VPC
+        default: us-east-1-vpc
+    VPC_OCTETS:
+        default: 10.11.0.0
+        description: null
+        overrides: null
+        required: true
+        type: null
+    PRIVATE_ROUTE_NAME:
+        required: true
+        description: the name to give to the private route
+        default: us-east-1-private-route
+    PRIVATE_SUBNET_NAME:
+        default: us-east-1-private-subnet
+        description: null
+        overrides: null
+        required: true
+        type: null
+    APP_BUCKET:
+        default: deploy.eelrb.com
+        description: the name of the bucket from which we should pull the app
+        overrides: null
+        required: true
+    APP_BUCKET_REGION:
+        default: us-east-1
+        description: the region where there vpn backups bucket was created
+        overrides: null
+        required: true
+    PUBLIC_ROUTE_NAME:
+        required: true
+        description: the name to give to the public route
+        default: us-east-1-public-route
+    PUBLIC_SUBNET_NAME:
+        default: us-east-1-public-subnet
+        description: null
+        overrides: null
+        required: true
+        type: null
+    APP_NAME:
+        default: dev
+        description: the name of the app to launch
+        overrides: null
+        required: true
+    VPN_ACCESS_CIDRS:
+        default:
+            - 0.0.0.0/0
+        description: null
+        overrides: null
+        required: true
+        type: array
+    APP_DNS_PREFIX:
+        default: dev
+        description: "the dns entry to create for the VPN server (<prefix>.<zone>)"
+        overrides: null
+        required: true
+        type: null
+    DNS_ZONE:
+        default: eelrb.com
+        description: the dns entry for the zone (i.e. example.com)
+        overrides: null
+        required: true
+        type: null
+    VPN_SSH_ACCESS_CIDRS:
+        default:
+            - 10.0.0.0/8
+        description: The cidrs from where you should be able to ssh in
+        overrides: null
+        required: true
+        type: array
+    APP_INSTANCE_TYPE:
+        default: t2.micro
+        description: null
+        overrides: null
+        required: true
+        type: null
+    APP_SSH_KEY_NAME:
+        default: dev.eelrb.com
+        description: What key should the app instance be launched with?
+        overrides: null
+        required: true
+        type: null
     TIMEZONE:
         default: America/Chicago
         value: America/Chicago
@@ -6,6 +89,26 @@ variables:
         overrides: null
         required: true
         type: null
+    REGION:
+        default: "INSTANCE::region"
+        description: the region we are launching in
+        overrides: null
+        required: true
+        type: string
+    APP_AMI_ID:
+        description: the ami id of the vpn
+        switch: "INSTANCE::region"
+        cases:
+            us-east-1: ami-1ecae776
+            us-west-1: ami-d114f295
+            us-west-2: ami-e7527ed7
+            eu-west-1: ami-a10897d6
+            eu-central-1: ami-a8221fb5
+            ap-southeast-1: ami-68d8e93a
+            ap-northeast-1: ami-cbf90ecb
+            ap-southeast-2: ami-fd9cecc7
+            sa-east-1: ami-b52890a8
+        type: case
     DATADOG_KEY:
         default: null
         value: null
