--- a/config.yaml
+++ b/config.yaml
@@ -20,7 +20,7 @@ variables:
         required: true
         type: null
     APP_BUCKET:
-        default: deploy.eelrb.com
+        default:
         description: the name of the bucket from which we should pull the app
         overrides: null
         required: true
@@ -40,7 +40,7 @@ variables:
         required: true
         type: null
     APP_NAME:
-        default: dev
+        default:
         description: the name of the app to launch
         overrides: null
         required: true
@@ -52,13 +52,13 @@ variables:
         required: true
         type: array
     APP_DNS_PREFIX:
-        default: dev
+        default:
         description: "the dns entry to create for the VPN server (<prefix>.<zone>)"
         overrides: null
         required: true
         type: null
     DNS_ZONE:
-        default: eelrb.com
+        default:
         description: the dns entry for the zone (i.e. example.com)
         overrides: null
         required: true
@@ -77,7 +77,7 @@ variables:
         required: true
         type: null
     APP_SSH_KEY_NAME:
-        default: dev.eelrb.com
+        default:
         description: What key should the app instance be launched with?
         overrides: null
         required: true
