fixing up the repo

--- a/config.yaml
+++ b/config.yaml
@@ -51,6 +51,10 @@ variables:
         overrides: null
         required: true
         type: array
+    VPN_NAME:
+        required: true
+        description: the name of the VPC
+        default: vpn
     APP_DNS_PREFIX:
         default:
         description: "the dns entry to create for the VPN server (<prefix>.<zone>)"
