--- a/config.yaml
+++ b/config.yaml
@@ -20,7 +20,7 @@ variables:
         required: true
         type: null
     APP_BUCKET:
-        default: dev.amenity.io
+        default: dev.eelrb.com
         description: the name of the bucket from which we should pull the app
         overrides: null
         required: true
@@ -58,7 +58,7 @@ variables:
         required: true
         type: null
     DNS_ZONE:
-        default: amenity.io
+        default: eelrb.com
         description: the dns entry for the zone (i.e. example.com)
         overrides: null
         required: true
@@ -77,7 +77,7 @@ variables:
         required: true
         type: null
     APP_SSH_KEY_NAME:
-        default: dev.amenity.io
+        default: dev.eelrb.com
         description: What key should the app instance be launched with?
         overrides: null
         required: true
