uses elb dns name and parses it

--- a/config.yaml
+++ b/config.yaml
@@ -80,7 +80,7 @@ variables:
         required: true
         type: array
     ELB_NAME:
-        default: "STACK::coreo_aws_ec2_elb.dev-elb.name"
+        default: "STACK::coreo_aws_ec2_elb.dev-elb.dns_name"
         required: true
         descripiton: comma seperated list of the private subnet ids
     ELB_TYPE:
