--- a/config.yaml
+++ b/config.yaml
@@ -89,6 +89,21 @@ variables:
         description: the name of the subnet the elb should created in (should correspond to ELB_TYPE)
         overrides: null
         required: true
+    ELB_PROXY_PORT:
+        default: 80
+        description: "elb proxy port -- this will be forwarded to the same port on elb, but forwarded to https by nginx config"
+        overrides: null
+        required: true
+    ELB_SSL_PROXY_PORT:
+        default: 443
+        description: elb ssl proxy port -- this will be forwarded to ELB_HEALTH_CHECK_PORT by elb (install ssl cert on this listener)
+        overrides: null
+        required: true
+    ELB_HEALTH_CHECK_PORT:
+        default: 1443
+        description: elb healthcheck port -- nginx listens to this port and forwards to node
+        overrides: null
+        required: true
     VPN_SSH_ACCESS_CIDRS:
         default:
             - 10.0.0.0/8
@@ -113,11 +128,6 @@ variables:
         default: "STACK::coreo_aws_ec2_elb.dev-elb.dns_name"
         required: true
         descripiton: comma seperated list of the private subnet ids
-    ELB_PROXY_PORT:
-        default: 80
-        description: elb proxy port
-        overrides: null
-        required: true
     APP_PORT:
         default: 3000
         description: upstream app port
