--- a/config.yaml
+++ b/config.yaml
@@ -134,14 +134,14 @@ variables:
         overrides: null
         required: true
     REGION:
-        default: "INSTANCE::region"
+        default: "PLAN::region"
         description: the region we are launching in
         overrides: null
         required: true
         type: string
     APP_AMI_ID:
         description: the ami id of the vpn
-        switch: "INSTANCE::region"
+        switch: "PLAN::region"
         cases:
             us-east-1: ami-1ecae776
             us-west-1: ami-d114f295
